--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-  first_name: Aron
-middle_name:
+first_name: Aron
+middle_name: Raja
 last_name: Raja
 email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
