--- a/_config.yml
+++ b/_config.yml
@@ -245,7 +245,7 @@ external_links:
   target: _blank
   exclude: null
 imagemagick:
-  enabled: false
+  enabled: true
   widths:
     - 480
     - 800
